style.css
:root{
	--backgroundColor: rgb(240, 240, 240);
	--onBackgroundColor: #3c3c3b;;
	--onBackgroundVariantColor: grey;
	
	--surfaceColor: white;
	--onSurfaceColor: #3c3c3b;
	
	--surfaceVariantColor: black;
	--onSurfaceVariantColor: rgb(220, 220, 220);;
}

body{
	font-family: 'Futura', Arial, sans-serif;
	font-weight: normal;	
	margin: 0;
	padding: 0;
	background: var(--backgroundColor);
	
	font-size: 13px;
	color: var(--onSurfaceColor);
	line-height: normal;
	word-wrap: break-word;
}

/*BASIC ELEMENTS STYLE*/
h1, h2{
	margin-top: 2em;
	margin-bottom: 2em;
}

a{
	text-decoration: none;
	color: inherit;
}

a:hover{
	text-decoration: underline !important;
}

hr{
	width: 66%;
	margin: 3em auto;
	border: none;
	border-bottom: thin lightgrey solid;
}

table{
	border: 2px solid lightblue;
	border-collapse: collapse;
}

table td{
	padding: 1em;
	border: 1px solid lavender;
}

/*MAIN LAYOUT*/
header{
	text-align: center;
	margin: 180px 0;
	line-height: 1;
}

header h1{
	font-size: 16px;
	font-weight: normal;
}

header nav{
	font-size: 14px;
	font-weight: normal;
	padding: 0;
	font-style: italic;
}

header nav a{
	margin: 0 0.5em;
}

main{
	/* max-width: 1000px; */
	height: auto;
	margin-left: auto;
	margin-right: auto;
	margin-top: 1em;
	
	padding: 0 50px;
}

footer{
	color: var(--onBackgroundVariantColor);
	text-align: right;
	margin: 1em;
	margin-top: 15em;
}

/*POSTS*/
video{
	object-fit: inherit;
}

.posts{
	/* max-width: 1280px; */
	margin-left: 0px;
	padding-left: 0px;
	list-style-type: none;
}

.post{
	margin: 100px 0;
	padding: 20px 60px;
	background: var(--surfaceColor);
}

.post>figure{
	margin: 0;
}

.post>figure figcaption{
	text-align: right;
}

.post>figure figcaption a:hover{
	text-decoration: none;
}
.post>figure figcaption a:hover h2{
	text-decoration: underline;
}

.post>figure figcaption h2 {
	font-size: 13px;
	margin: 0.67em 0;
	font-weight: normal;
}

.post .readmore{
	display: block;
	text-align: left;
	text-transform: lowercase;
	font-style: italic;
	/* font-size: 1.1rem; */
}

.post>figure figcaption p{
	text-align: right;
	font-style: italic;
	font-size: 10px;
	margin: 0.83em 0;
	line-height: 1rem;
}

.post.video video{
	max-width: 100%;
	min-height: 80vh;
}

.post.video, .post.vimeo{
	text-align: center;
	color: var(--onSurfaceVariantColor);
	background: var(--surfaceVariantColor);
	border-radius: 3px;
}

.post.video video, .post.vimeo iframe{
	margin-bottom: 1.5em;
	max-height: 80vh;
}

.post.video video:focus{
	outline: none;
}

/*CV*/
body.page-cv main{
	max-width: 48em;
}

ul{
	margin: 0;
	padding: 0;
	list-style-type: none;
}

li{
	margin: 0;
}

h2{
	font-weight: normal;
	margin-top: 2em;
}

h3{
	margin-top: 2em;
	font-weight: normal;
}

/* COMPONENTS */
/* Gallery */
figure.gallery{
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	flex-flow: wrap;
	gap: 10px;
}
figure.gallery img{
	display: block;
	width: 100%;
	height: 100%;
	object-fit: cover;
}

figure.gallery>img,
figure.gallery>video{
	display: block;
	/*width:  auto;*/
	/*height: auto;*/
	/*  min-height: 30vh;
	max-height: 80vh;*/
	/*flex-shrink: 1;*/
	flex-grow: 1;
	flex-basis: 25%;
	width:  25%;
	/*width: 1px;*/
	margin:  2px;
}

figure>img:nth-of-type(1){
	width:  100%;
}

figure>figcaption{
	width: 100%;
}

.post video{
	object-fit: contain;
	max-height: 90vh;
}


/* Markdown specific */

/* inline figure with caption */

/*p{
	text-indent: 1em;
	margin: 0;
}*/

p>img, video{
	display: block;
	width: 100%;
	max-height: 95vh;
	object-fit: contain;
	object-position: center;
}
p>img~em, video~p>em
{
	display: block;
	font-variant: italic;
	/*text-align: center;*/
	margin: 1em;
	font-size: smaller;
}
p>img~em:last-child{
	margin-bottom: 5em;
}

figure{
	margin: 5em;
}

/*ARTICLE in project pages*/

article{
	margin: auto;
}
article.post>figure{
	margin: 5em 0;
}

article.post video{
	width: 100%;
}


article.post>figure figcaption{
	text-align: right;
	margin: 1em;
	font-style: italic;
	font-size: smaller;
}

article img{
	max-width: 100%;
	max-height: 95vh;
	/*display: block;*/
}

article.post h1, article.post>h2{
	text-align: center;
}

article p, 
article h1, 
article h2, 
article h3, 
article h4, 
article ul, 
article ol{
	max-width: 64rem;
	margin: 2em auto;
}

article h1, article h2, article h3, article h4{
	margin-bottom: 0rem;
}
article ul{
	margin-top: 0rem;
}

article{
	line-height: 1.5rem;
}

/*MOBILE OVERRIDES*/
@media (max-width: 768px){
	main{
		padding: 0 10px;
	}
	.post video{
		/* object-fit: cover; */
	}
	.posts li{
		padding: 10px;
	}
}

